2006-05-11  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JFrame.java
	(EXIT_ON_CLOSE): Added note to API docs,
	(close_action): Renamed closeAction,
	(JFrame()): Change title to "",
	(JFrame(String)): Added API docs,
	(getAccessibleContext): Likewise,
	(getDefaultCloseOperation): Updated for renamed field, added API docs,
	(processWindowEvent): Updated for renamed field,
	(setDefaultCloseOperation): Likewise, and updated API docs.

2006-05-11  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JFrame.java
	(paramString): Reimplemented,
	* javax/swing/SwingUtilities.java
	(convertWindowConstantToString): New method.

2006-05-11  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/WindowConstants.java: Updated API docs.

2006-05-11  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicToggleButtonUI.java: Updated API docs,
	(createUI): Removed 'final' qualifier for parameter,
	(paint): Reformatted.

2006-05-11  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicCheckBoxUI.java: Added API docs plus,
	(createUI): Removed 'final' qualifier on method argument.

2006-05-11  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicCheckBoxUI.java
	(getDefaultIcon): Removed this redundant method.

2006-05-11  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicRadioButtonUI.java
	(paint): Pass component size to paintFocus().

2006-05-11  Robert Schuster  <robertschuster@fsfe.org>

	* java/awt/Component.java:
	(dispatchEventImpl): Added comment.

2006-05-11  Mark Wielaard  <mark@klomp.org>

	* tools/gnu/classpath/tools/appletviewer/Main.java (main): Cast
	Option constructor null argument to String.

2006-05-11  Mark Wielaard  <mark@klomp.org>

	* java/awt/geom/GeneralPath.java (WIND_EVEN_ODD, WIND_NON_ZERO):
	Fully qualify PathIterator constants

2006-05-11  Robert Schuster  <robertschuster@fsfe.org>
